<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="32dp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/sign_in"
            android:textSize="@dimen/font_big"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_boarder"
            android:layout_marginTop="64dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_boarder"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="25dp"
            android:id="@+id/sign_in"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/light_blue">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/font_large"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/login_text"
               />
                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/login_text"
                    android:layout_marginStart="16dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"
            android:id="@+id/sign_up">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font_large2"
                android:text="@string/new_user"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/font_large2"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:text="@string/create_new_account"
                />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
</layout>