<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_task"
                android:textColor="@color/black"
                android:textSize="@dimen/font_big"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            android:paddingBottom="16dp"
            tools:context=".activity.AddTaskActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                 android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="@string/title"
                    android:padding="16dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="@string/date"
                    android:padding="16dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/priority"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <RelativeLayout
                    android:id="@+id/choose_priority"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/edit_text_boarder"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_priority"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#00ffffff" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_arrow_down" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="@string/description"
                    android:minHeight="150dp"
                    android:padding="16dp"
                    android:textColor="@color/black" />


                <android.support.v7.widget.CardView
                    android:id="@+id/add_btn"
                    app:cardBackgroundColor="@color/light_blue"
                    app:cardCornerRadius="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/add_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawablePadding="8dp"
                            android:text="@string/add"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_large2"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>