<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.SignUpActivity">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="24dp"
            android:src="@drawable/ic_close" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
           android:padding="32dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"
                    android:src="@drawable/ic_check_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_new_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_big"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <EditText
                    android:id="@+id/user_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="@string/user_name"
                    android:padding="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <EditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="@string/email"
                    android:padding="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large2" />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_boarder"
                    android:hint="@string/password"
                    android:layout_margin="4dp"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:padding="16dp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/light_blue"
                    app:cardCornerRadius="25dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/register_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/sign_up"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_large2"
                            android:textStyle="bold"
                    />

                            <ImageView
                                android:id="@+id/arrow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_arrow"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@id/register_text"
                                android:layout_marginStart="8dp"
              />
                     </RelativeLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>